# shamwari

./: .gitignore  .gitleaksignore  CLAUDE.md  openapi.json  package-lock.json  pyproject.toml  turbo.json
.github/workflows/: ci.yml  pr-title-lint.yml  smoke.yml
apps/platform/: .env.example  README.md  eslint.config.mjs  package.json  playwright.config.ts  svelte.config.js  vercel.json
apps/platform/app/: layout.tsx
apps/platform/e2e/: landing.spec.ts
apps/platform/src/: hooks.server.ts
apps/platform/src/lib/: utils.ts
apps/platform/src/lib/components/: Footer.svelte  Header.svelte
apps/platform/src/lib/seo/: jsonld.ts  meta.ts
apps/platform/src/lib/server/: api-client.test.ts  api-client.ts  api-keys.test.ts  api-keys.ts  billing.test.ts  billing.ts  profile.test.ts  profile.ts  usage.test.ts  usage.ts
apps/platform/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  +page.ts
apps/platform/src/routes/callback/: +server.ts
apps/platform/src/routes/dashboard/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  +page.ts
apps/platform/static/: robots.txt
apps/web/: .env.example  README.md  eslint.config.mjs  lighthouserc.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
apps/web/app/: layout.tsx
apps/web/e2e/: landing.spec.ts
apps/web/src/: app.css  app.d.ts  app.html  hooks.server.ts
apps/web/src/lib/seo/: jsonld.ts  (+4 more)
apps/web/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  +page.ts
apps/web/static/: llms.txt  manifest.webmanifest  robots.txt
apps/web/static/.well-known/: ai.txt  security.txt
scripts/: export_openapi.py
src/auth/: dependencies.py  workos.py
src/db/: designs.py
src/routers/: api_keys.py  billing.py  usage.py  users.py
src/store/: memory.py
tests/: conftest.py  test_api_keys.py  test_billing.py  test_usage.py  test_users.py
(+57 files in other folders)
